src/test/deca/library/valid/result/test_Multiply_member_by_member_output_expected.res
Test produit membre par membre de tableaux 1D
--------------
Tableau1D = [
5 ,5 ,5 ,5 ,5 ,5 ,5 ,]--------------
--------------
Tableau1D = [
6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,]--------------
Le résultat du produit membre par membre est: 
--------------
Tableau1D = [
30 ,30 ,30 ,30 ,30 ,30 ,30 ,]--------------

Test produit membre par membre tableau 2D
Produit membre par membre entre un tableau de int rempli de 5 et un tableau de float rempli de 6.0
Le résultat du produit membre par membre est: 
--------------
Tableau2D = [
30 ,30 ,30 ,
30 ,30 ,30 ,
30 ,30 ,30 ,
]--------------

Produit membre par membre entre un tableau de float rempli de 6.8 et un tableau de int rempli de 5 
--------------
Tableau2D = [
3.40000e+01 ,3.40000e+01 ,3.40000e+01 ,
3.40000e+01 ,3.40000e+01 ,3.40000e+01 ,
3.40000e+01 ,3.40000e+01 ,3.40000e+01 ,
]--------------

Produit membre par membre entre un tableau de float rempli de 6.0 et un tableau de float rempli de 10.5
Le résultat du produit membre par membre est: 
--------------
Tableau2D = [
6.30000e+01 ,6.30000e+01 ,6.30000e+01 ,
6.30000e+01 ,6.30000e+01 ,6.30000e+01 ,
6.30000e+01 ,6.30000e+01 ,6.30000e+01 ,
]--------------

Produit membre par membre entre un tableau de int rempli de 5 et un tableau de int rempli de 2
Le résultat de la produit membre par membre est: 
--------------
Tableau2D = [
10 ,10 ,10 ,
10 ,10 ,10 ,
10 ,10 ,10 ,
]--------------

