src/test/deca/library/invalid/result/produit_matriciel_taille_invalid_output_no_check.res
Produit matriciel entre un tableau de int rempli de 5 et un tableau de int rempli de 3
--------------
Tableau2D = [
5 ,5 ,
5 ,5 ,
5 ,5 ,
]--------------
--------------
Tableau2D = [
3 ,3 ,
3 ,3 ,
3 ,3 ,
]--------------
Taille de matrice incompatible avec le produit matriciel:3 != 2
Erreur de dimension
